# number_to_french

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py
src/number_to_french/: number_to_french.py
tests/: test_number_to_french.py
