[build-system]
requires = ["setuptools>=70.0", "setuptools-scm>=8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "number_to_french"
version = "0.1.0"
dependencies = []
requires-python = ">=3.9"
authors = [
  { name="Quang Ngoc DUONG", email="quangngoc88@gmail.com" },
]
description = "Number to french converter"
readme = "Readme.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
number-to-french = "number_to_french.number_to_french:main"